--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LMSApp">
         <activity
+            android:name=".Adicionar"
+            android:exported="true" />
+        <activity
             android:name=".Perfil"
             android:exported="true" />
         <activity
